--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rm -rf public/assets && webpack --config webpack.config.dev.js"
+    "start": "rm -rf public/assets && webpack --config webpack.config.dev.js && node app.js"
   },
   "repository": {
     "type": "git",
